added bootstraps to Partnerships page

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 	<title>RAE Popelka Web Development & Consulting</title>
     
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 <!-- Bootstrap -->
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
