--- a/partnerships.html
+++ b/partnerships.html
@@ -23,7 +23,7 @@
 <body>
     <header>
     <div class="main-logo">
- <img src="img/logo.svg" class=img-fluid  alt="Responsive Image" max-width: 100%;  height: auto;/>
+ <img src="img/logo.svg" class=img-fluid  alt="Responsive Image"/>
 
     </div>
        
